listitem: fix start spacing

--- a/components/ListItem.css
+++ b/components/ListItem.css
@@ -10,7 +10,7 @@
 
   border: none;
   padding-block: 8px;
-  padding-inline: 8px 24px;
+  padding-inline: 16px 24px;
 
   outline: none;
 
@@ -66,7 +66,7 @@
 }
 
 #icon {
-  font-size: 18px;
+  font-size: 24px;
 }
 
 #trailing-icon {
